RESOLVED FIXED194790
-[AVSampleBufferDisplayLayer player]: Unrecognized selector crash
https://bugs.webkit.org/show_bug.cgi?id=194790
Summary -[AVSampleBufferDisplayLayer player]: Unrecognized selector crash
Jer Noble
Reported 2019-02-18 14:04:58 PST
-[AVSampleBufferDisplayLayer player]: Unrecognized selector crash
Attachments
Patch (2.01 KB, patch)
2019-02-18 14:10 PST, Jer Noble
no flags
Patch for landing (2.04 KB, patch)
2019-02-18 14:30 PST, Jer Noble
no flags
Jer Noble
Comment 1 2019-02-18 14:08:39 PST
Jer Noble
Comment 2 2019-02-18 14:10:43 PST
Jon Lee
Comment 3 2019-02-18 14:19:35 PST
Jer Noble
Comment 4 2019-02-18 14:29:22 PST
(In reply to Jon Lee from comment #3) > Comment on attachment 362331 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=362331&action=review > > > Source/WebCore/ChangeLog:4 > > + https://bugs.webkit.org/show_bug.cgi?id=194790 > > Add Radar please. Bah. webkit-patch prepare doesn't seem to understand <radar://number> links.
Jer Noble
Comment 5 2019-02-18 14:30:54 PST
Created attachment 362336 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-02-18 15:12:39 PST
Comment on attachment 362336 [details] Patch for landing Clearing flags on attachment: 362336 Committed r241742: <https://trac.webkit.org/changeset/241742>
WebKit Commit Bot
Comment 7 2019-02-18 15:12:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.