-[AVSampleBufferDisplayLayer player]: Unrecognized selector crash https://bugs.webkit.org/show_bug.cgi?id=194790 <rdar://problem/33866742>

Reviewed by Jon Lee.

Ensure that a WebVideoContainerLayer's sole sublayer is actually an AVPlayerLayer (and not
an AVSampleBufferDisplayLayer) before reporting that the layer type is LayerTypeAVPlayerLayer.

* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::PlatformCALayerCocoa::layerTypeForPlatformLayer):


Canonical link: https://commits.webkit.org/209173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241742 268f45cc-cd09-0410-ab3c-d52691b4dbfc